[tool.poetry]
name = "mlflow-docker-example"
version = "0.1.0"
description = "A reference repository that contains configurations required to use MLflow with Docker Containers"
authors = ["Faiz M Khan <ghost0x07@gmail.com>"]
readme = "README.md"
packages = [{include = "mlflow_docker_example"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
mlflow = "^2.1.1"
numba = "^0.56.4"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
jupyter = "^1.0.0"
notebook = "^6.5.2"
ipykernel = "^6.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
